--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
-    "@mui/material": "^5.10.10",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@material/button": "^14.0.0",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
     "@mui/x-date-pickers": "^5.0.4",
     "@progress/kendo-licensing": "^1.2.2",
     "@progress/kendo-react-dateinputs": "^5.9.0",
